--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <header>
-    <img src="Flux_Dev_Create_a_logo_for_Launchpad_a_program_designed_to_sup_3.jpg" alt="LaunchPad Logo">
+   <a href="https://ibb.co/Kc34MTWH"><img src="https://i.ibb.co/RGVrxRcW/Flux-Dev-Create-a-logo-for-Launchpad-a-program-designed-to-sup-3.jpg" alt="Flux-Dev-Create-a-logo-for-Launchpad-a-program-designed-to-sup-3" border="0" /></a>
     <h1>LaunchPad Program</h1>
     <p>By ECEll IARE | Mentored by Govind Sharma</p>
   </header>
